@@ -526,6 +526,7 @@ struct SCIP_Set
                                               *   'd'iscrete) */
    char                  sepa_cutselrestart; /**< cut selection during restart ('a'ge, activity 'q'uotient) */
    char                  sepa_cutselsubscip; /**< cut selection for sub SCIPs  ('a'ge, activity 'q'uotient) */
+   SCIP_Bool             sepa_usecutpoolfilter; /**< should cutpool separation filter for efficacy? */
    int                   sepa_maxruns;       /**< maximal number of runs for which separation is enabled (-1: unlimited) */
    int                   sepa_maxrounds;     /**< maximal number of separation rounds per node (-1: unlimited) */
    int                   sepa_maxroundsroot; /**< maximal number of separation rounds in the root node (-1: unlimited) */
